# test_rust_on_python

./: .gitignore  Cargo.toml  README.md  a.py
src/: lib.rs
src/extend/: mod.rs  py_implementation.rs
src/extend/py_class_/: mod.rs  test_class.rs
src/extend/py_implementation/: prototypes.rs
src/lid_extend/: mod.rs
